updated component with best practices

--- a/SalesforceLWCandJSEnthusiasts/force-app/main/default/lwc/parentComponentModal/parentComponentModal.html
+++ b/SalesforceLWCandJSEnthusiasts/force-app/main/default/lwc/parentComponentModal/parentComponentModal.html
@@ -1,9 +1,20 @@
 <template>
-    <lightning-button label="Open Modal" onclick={openModal}></lightning-button>
-    
-    <!-- Include the custom modal component -->
-    <c-custom-modal is-modal-open={isModalOpen} onmodalclose={handleModalClose} onmodalconfirm={handleModalConfirm}>
-      <p>Here you can place dynamic content like forms, text, or other components.</p>
-    </c-custom-modal>
-  </template>
-  
+  <!-- Button to Open Modal -->
+  <lightning-button
+    label="Open Modal"
+    onclick={openModal}
+  ></lightning-button>
+
+  <!-- Custom Modal Component -->
+  <c-custom-modal
+    is-modal-open={isModalOpen}
+    modal-title="My Custom Modal"
+    cancel-label="Dismiss"
+    confirm-label="Proceed"
+    onmodalclose={handleModalClose}
+    onmodalconfirm={handleModalConfirm}
+  >
+    <!-- Modal Content -->
+    <p>This is the dynamic content inside the modal.</p>
+  </c-custom-modal>
+</template>
